<resources>
    <string name="app_name">APIGameAndroid</string>
    <string name="placeholder">김밥왕자</string>

    <!--game-->
    <string name="start_game">게임 시작</string>
    <string name="exit_game">게임 나가기</string>
    <string name="choice_answer">정답을 선택하세요!</string>
    <string name="versus">VS</string>
    <string name="cancel">취소</string>
    <string name="open_counts">집계 공개</string>
    <string name="input_question">Q. 문제를 입력하세요</string>
    <string name="init_question_count">(0/20)</string>
    <string name="next">다음</string>

    <!--OX-->
    <string name="O">O</string>
    <string name="X">X</string>
</resources>