<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="controller" type="lib.geoji.flower.apigameandroid.ox.OxMainController"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_choice_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ox_choice_selector"
                android:text="@string/O"
                android:onClick="@{controller::onClickOButton}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"/>

            <Button
                android:id="@+id/button_choice_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ox_choice_selector"
                android:text="@string/X"
                android:onClick="@{controller::onClickXButton}"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:text="@string/placeholder"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="@{controller::onClickNextButton}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_game"/>
    </LinearLayout>
</layout>