<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="controller" type="lib.geoji.flower.apigameandroid.ox.OxInitController"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#aa000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:textColor="#ffffff"
                android:text="@string/cancel"
                android:onClick="@{controller::onClickCancelButton}"/>

            <Button
                android:id="@+id/buttonCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:textColor="#9f9f9f"
                android:text="@string/open_counts"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/editTextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColorHint="#cfcfcf"
                android:textColor="#ffffff"
                android:inputType="text"
                android:textStyle="bold"
                android:maxLength="20"
                android:hint="@string/input_question"
                android:onTextChanged="@{controller::onQuestionChanged}"/>

            <TextView
                android:id="@+id/textViewQuestionCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:text="@string/init_question_count"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/next"
            android:onClick="@{controller::onClickNextButton}"/>
    </LinearLayout>
</layout>